--- a/website/templates/my-recipes.html
+++ b/website/templates/my-recipes.html
@@ -7,10 +7,10 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">My Recipes</h1>
-          <p class="lead text-muted">View your recipes below</p>
+          <!-- <p class="lead text-muted">View your recipes below</p> -->
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="/create-recipe" class="btn btn-primary my-2">Create new recipe</a>
+            <!-- <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
           </p>
         </div>
       </div>
@@ -18,31 +18,30 @@
   
     <div class="album py-5 bg-light">
       <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             {% for recipe in my_recipes %}
-                <div class="col">
-                    <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-        
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h4 class="card-title">{{recipe.name}}</h4>
-                            <small class="text-muted">20 mins</small>
-                        </div>
-                        <p class="card-body">{{recipe.description}}</p>
-                        <div class="btn-group">
-                          <form method="POST">
-                            <button type="submit" name="view-or-edit" value="view" class="btn btn-lg btn-primary">View</button>
-                            <input type="hidden" name="recipe-id" value="{{recipe.id}}">
-                            <input type="hidden" name="recipe-name" value="{{recipe.formatted_name}}">
-                            <button type="submit" name="view-or-edit" value="edit" class="btn btn-outline-primary">Edit</button>
-                          </form>
-                        </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+    
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">{{recipe.name}}</h4>
+                        <small class="text-muted">20 mins</small>
                     </div>
+                    <p class="card-body">{{recipe.description}}</p>
+                    <div class="btn-group">
+                      <form method="POST">
+                        <button type="submit" name="view-or-edit" value="view" class="btn btn-lg btn-primary">View</button>
+                        <input type="hidden" name="recipe-id" value="{{recipe.id}}">
+                        <input type="hidden" name="recipe-name" value="{{recipe.formatted_name}}">
+                        <button type="submit" name="view-or-edit" value="edit" class="btn btn-outline-primary">Edit</button>
+                      </form>
                     </div>
                 </div>
+              </div>
+            </div>
             {% endfor %}
-
         </div>
       </div>
     </div>
