--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,8 +34,8 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
-                    <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">My Recipes</a>
-                    <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">New Recipe</a>
+                    <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">Recipes</a>
+                    <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Add Recipe</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                     {% else %}
                     <a class="nav-item nav-link" id="productPage" href="/product-page">Product page</a>
