--- a/website/templates/view-recipe.html
+++ b/website/templates/view-recipe.html
@@ -85,6 +85,14 @@
                     </div>
                 </div>
                 {% endfor %}
+            <div class="row">
+                <div class="position-relative">
+                    <div class="form-check form-switch position-absolute end-0 bottom-0">
+                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckShowRDA" onchange="toggleRDA(this)">
+                        <label class="form-check-label" for="flexSwitchCheckShowRDA">Show RDA</label>
+                    </div>
+                </div>
+            </div>
             <div class="row small">
 
                 <div class="col"> <!-- Left nutrition column -->
