--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,8 +33,8 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" id="home" href="/">Home</a>
-                    <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">Recipes</a>
+                    <a class="nav-item nav-link" id="home" href="/">Diary</a>
+                    <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">My Recipes</a>
                     <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Add Recipe</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                     {% else %}
