--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,29 +1,49 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <h3 align="center">Login</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input 
-            type="email" 
-            class="form-control" 
-            id="email" 
-            name="email"
-            placeholder="Enter email"
-         />
+<div class="row d-flex flex-column align-items-center justify-content-center" style="height: calc(100vh - 80px);">
+    <div class="col-lg-12 col-xl-11">
+        <div class="row justify-content-center shadow" style="border-radius: 25px; background-color: white;">
+            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1 p-5 rounded">
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Log in</p>
+                <form method="POST" class="form-horizontal">
+                    <div class="form-group mb-4">
+                        <!-- <label for="email">Email Address</label> -->
+                         <div class="d-flex flex-row align-items-center">
+                            <i class="bi bi-envelope-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="email" 
+                            class="form-control form-control-lg" 
+                            id="email" 
+                            name="email"
+                            placeholder="Email"
+                            aria-describedby="emailHelp"
+                         />
+                         </div>
+                    </div>
+                    
+                    <div class="form-group mb-4 d-flex flex-row align-items-center">
+                        <!-- <label for="password1">Password</label> -->
+                        <i class="bi bi-lock-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="password" 
+                            class="form-control form-control-lg" 
+                            id="password" 
+                            name="password"
+                            placeholder="Password"
+                         />
+                    </div>
+
+                    <div class="d-grid col-6 gap-2 mx-auto">
+                        <button type="submit" class="btn btn-primary btn-lg">Login</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                  class="img-fluid" alt="Sample image">
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password" 
-            name="password"
-            placeholder="Enter password"
-         />
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+</div>
 {% endblock %}
