--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,49 +1,124 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %}
+{% extends "base.html" %} {% block title %}Sign up{% endblock %}
+
+{% block inline_style %}
+<link 
+    rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+{% endblock%}
 
 {% block content %}
-<form method="POST">
-    <h3 align="center">Sign Up</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input 
-            type="email" 
-            class="form-control" 
-            id="email" 
-            name="email"
-            placeholder="Enter email"
-         />
+<div class="row d-flex flex-column align-items-center justify-content-center" style="height: calc(100vh - 80px);">
+    <div class="col-lg-12 col-xl-11">
+        <div class="row justify-content-center shadow" style="border-radius: 25px; background-color: white;">
+            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1 p-5 rounded">
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <form method="POST" class="form-horizontal">
+                    <div class="form-group mb-4 d-flex flex-row align-items-center">
+                        <!-- <label for="firstName">Your Name</label> -->
+                        <i class="bi bi-person-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="text" 
+                            class="form-control form-control-lg" 
+                            id="firstName" 
+                            name="firstName"
+                            placeholder="Your Name"
+                         />
+                    </div>
+
+                    <div class="mb-4 d-flex flex-row align-items-center">
+
+                        <div class="form-horizontal">
+                            <!-- <label for="email">Email Address</label> -->
+                             <div class="d-flex flex-row align-items-center">
+                                <i class="bi bi-calendar-event-fill fa-lg me-3 fa-fw"></i>
+                                <input 
+                                    type="date" 
+                                    class="form-control form-control-lg" 
+                                    id="email" 
+                                    name="email"
+                                    placeholder="Your Birth Date"
+                                    aria-describedby="emailHelp"
+                                />
+                             </div>
+                        </div>
+
+                        <div class="form-horizontal">
+                            <!-- <label for="firstName">Your Name</label> -->
+                            <div class="d-flex flex-row align-items-center">
+                                <i class="bi bi-gender-ambiguous fa-lg mx-3 fa-fw"></i>
+                                <select class="form-select form-select-lg" id="Sex" aria-label="Select your sex">
+                                    <option class="text-muted" value="" selected hidden  disabled>Sex</option>
+                                    <option value="1">Male</option>
+                                    <option value="2">Female</option>
+                                </select>
+                                <!-- <a href="#" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Default tooltip">
+                                    <i class="bi bi-info-circle-fill px-3 fa-lg fa-fw"></i>
+                                  </a> -->
+                                <!-- <button type="button" class="btn btn-transparent px-2" style="border-color: #00000000;" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
+                                    <i class="bi bi-info-circle-fill fa-lg fa-fw p-0 m-0"></i>
+                                </button> -->
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="form-group mb-4">
+                        <!-- <label for="email">Email Address</label> -->
+                         <div class="d-flex flex-row align-items-center">
+                            <i class="bi bi-envelope-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="email" 
+                            class="form-control form-control-lg" 
+                            id="email" 
+                            name="email"
+                            placeholder="Your Email"
+                            aria-describedby="emailHelp"
+                         />
+                         </div>
+                         <small id="emailHelp" class="mx-5 form-text text-muted text-center" style="display:block">(We will never share your email, date of birth, or sex with anyone else)</small>
+                    </div>
+                    
+                    <div class="form-group mb-4 d-flex flex-row align-items-center">
+                        <!-- <label for="password1">Password</label> -->
+                        <i class="bi bi-lock-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="password" 
+                            class="form-control form-control-lg" 
+                            id="password1" 
+                            name="password1"
+                            placeholder="Password"
+                         />
+                    </div>
+                
+                    <div class="form-group mb-4 d-flex flex-row align-items-center">
+                        <!-- <label for="password2">Repeat your password</label> -->
+                        <i class="bi bi-key-fill fa-lg me-3 fa-fw"></i>
+                        <input 
+                            type="password" 
+                            class="form-control form-control-lg" 
+                            id="password2" 
+                            name="password2"
+                            placeholder="Repeat your password"
+                         />
+                    </div>
+                    
+                    <div class="form-check d-flex justify-content-center mb-5">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                        <label class="form-check-label fs-5" for="form2Example3">
+                          I agree all statements in <a href="#!">Terms of service</a>
+                        </label>
+                      </div>
+
+                    <div class="d-grid col-6 gap-2 mx-auto">
+                        <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                  class="img-fluid" alt="Sample image">
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="email">First Name</label>
-        <input 
-            type="text" 
-            class="form-control" 
-            id="firstName" 
-            name="firstName"
-            placeholder="Enter first name"
-         />
-    </div>
-    <div class="form-group">
-        <label for="password1">Password</label>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password1" 
-            name="password1"
-            placeholder="Enter password"
-         />
-    </div>
-    <div class="form-group">
-        <label for="password2">Confirm password</label>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password2" 
-            name="password2"
-            placeholder="Confirm password"
-         />
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
 {% endblock %}
