--- a/website/templates/view-recipe.html
+++ b/website/templates/view-recipe.html
@@ -3,7 +3,6 @@
 {% block inline_style%}
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/github.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-<link rel="stylesheet" href="{{ url_for('static', filename='view-recipe.css')}}">
 
 <script type="text/javascript">
     var recipe_ingredients_data = JSON.parse({{recipe_ingredients_data_json|tojson}});
@@ -14,10 +13,10 @@
  </script>
  <script src="{{ url_for('static', filename='view-recipe.js')}}"></script>
 
-{% endblock%}
+{% endblock %}
 
 {% block content %}
-{% from 'view-recipe-macros.html' import progress_bar %}
+{% from 'progress-bar.html' import progress_bar %}
 
 <h1 class="display-2" align="center" style="text-transform: capitalize;">{{recipe.name}}</h1>
 <br/>
