--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,7 +21,7 @@
         {% endblock%}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
             <button
                 class="navbar-toggler"
                 type="button"
@@ -68,7 +68,7 @@
         {% endif %}
         {% endwith %}
 
-        <div class="container">
+        <div class="container h-100">
             {% block content %}
             {% endblock %}
         </div>
