--- a/website/templates/progress-bar.html
+++ b/website/templates/progress-bar.html
@@ -1,4 +1,4 @@
-{% macro progress_bar(nutrient_key, total_recipe_percent, bar_colour_class="") -%}
+{% macro progress_bar(nutrient_key, total_recipe_percent, bar_colour_class="", bar_colour_code="") -%}
 <div class="progress position-relative" style="height: 18px;" onmouseover="showRDA(this)" onmouseout="showPercentage(this)">
     <div class="progress-bar opacity-50 {{bar_colour_class}}" role="progressbar" style="width: {{total_recipe_percent}}%" aria-valuenow="{{total_recipe_percent}}" aria-valuemin="0" aria-valuemax="100"></div>
     <div class="progress d-flex position-absolute w-100 top-50 start-50 translate-middle" style="height: 20px;" >
@@ -6,4 +6,19 @@
     </div>
     <small id="{{nutrient_key}}-percentage" class="justify-content-center elementToFadeIn d-flex position-absolute w-100">{{total_recipe_percent}}%</small>
 </div>
+{%- endmacro %}
+
+{% macro split_circle_progress_bar(
+    nutrient_keys=["PLACEHOLDER1", "PLACEHOLDER2", "PLACEHOLDER3"], 
+    bar_angles=[120, 120, 120], 
+    bar_colours=["red", "green", "blue"],
+    size="120",
+    stroke="7"
+    ) 
+-%}
+{% set macro_sum = namespace(value=0) %}
+{% for i in range(bar_angles|length) %}
+<div class="pie position-absolute" data-pie='{ "number": false, "speed": "120", "percent": "{{(bar_angles[i] - 2) / 3.6 }}", "inverse": "true", "textPosition": "20%", "fontWeight":"bold", "size":"{{size}}", "rotation": "{{macro_sum.value}}", "stroke": {{stroke}}, "colorSlice":"{{bar_colours[i]}}", "colorCircle":"#FFFFFF00"}'></div>
+{% set macro_sum.value = macro_sum.value - bar_angles[i]%}
+{% endfor%}
 {%- endmacro %}
