--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="'utf8"/>
+        <meta charset="'utf-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1"/>
         <link
             rel="stylesheet"
@@ -26,57 +26,60 @@
         {% endblock%}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbar"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <div class="navbar-nav">
-                    {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" id="home" href="/">Diary</a>
-                    <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">My Recipes</a>
-                    <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Add Recipe</a>
-                    <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-                    {% else %}
-                    <a class="nav-item nav-link" id="productPage" href="/product-page">Product page</a>
-                    <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                    <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-                    {% endif %}
+        <main>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbar"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <div class="navbar-nav">
+                        {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" id="home" href="/">Diary</a>
+                        <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">Recipes</a>
+                        <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Add Recipe</a>
+                        <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                        {% else %}
+                        <a class="nav-item nav-link" id="productPage" href="/product-page">Product page</a>
+                        <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                        <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-            {% if category == 'error' %}
-            <div class="alert alert-danger alert-dismissable fade show d-flex justify-content-between" role="alert">
-                <span class="my-auto">{{ message }}</span>
-                <button class="btn my-auto mx-1" data-bs-dismiss="alert">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            {% else %}
-            <div class="alert alert-success alert-dismissable fade show d-flex justify-content-between" role="alert">
-                <span class="my-auto">{{ message }}</span>
-                <button class="btn my-auto mx-1" data-bs-dismiss="alert">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                {% if category == 'error' %}
+                <div class="alert alert-danger alert-dismissable fade show d-flex justify-content-between" role="alert">
+                    <span class="my-auto">{{ message }}</span>
+                    <button class="btn my-auto mx-1" data-bs-dismiss="alert">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% else %}
+                <div class="alert alert-success alert-dismissable fade show d-flex justify-content-between" role="alert">
+                    <span class="my-auto">{{ message }}</span>
+                    <button class="btn my-auto mx-1" data-bs-dismiss="alert">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endif %}
+                {% endfor %}
             {% endif %}
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
+            {% endwith %}
 
-        <div class="container h-100">
-            {% block content %}
-            {% endblock %}
-        </div>
+            <div class="container h-100">
+                {% block content %}
+                {% endblock %}
+            </div>
+
+        </main>
         <!-- <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
