--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,22 +3,28 @@
     <head>
         <meta charset="'utf-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1"/>
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            crossorigin="anonymous"
-        />
+
+        <!-- Bootstrap stylesheets -->
         <link 
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
             rel="stylesheet" 
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
             crossorigin="anonymous"
-            />
-        
+        />
         <link 
             rel="stylesheet" 
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-            />
+        />
+
+        <!-- Sidebar stylesheets -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='sidebar.css')}}"/>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+            crossorigin="anonymous"
+        /> <!-- for sidebar icon sizing (could be optimised?) -->
+        <!-- <link href="https://kit.fontawesome.com/a6dc5632bb.js" rel="stylesheet" crossorigin="anonymous"/> -->
+        {% from 'sidebar.html' import sidebar %}
         
         <title>{% block title %}Home{% endblock %}</title>
 
@@ -26,7 +32,10 @@
         {% endblock%}
     </head>
     <body>
-        <main>
+        <div>
+            {% if user.is_authenticated %}
+            {{ sidebar(user_name) }}
+            {% else %}
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
                 <button
                     class="navbar-toggler"
@@ -38,20 +47,23 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav">
-                        {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" id="home" href="/">Diary</a>
+                        <!-- {% if user.is_authenticated %} -->
+                        <!-- <a class="nav-item nav-link" id="home" href="/">Diary</a>
                         <a class="nav-item nav-link" id="myRecipes" href="/my-recipes">Recipes</a>
                         <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Add Recipe</a>
-                        <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-                        {% else %}
+                        <a class="nav-item nav-link" id="logout" href="/logout">Logout</a> -->
+                        <!-- {% else %} -->
                         <a class="nav-item nav-link" id="productPage" href="/product-page">Product page</a>
                         <a class="nav-item nav-link" id="login" href="/login">Login</a>
                         <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-                        {% endif %}
+                        <!-- {% endif %} -->
                     </div>
                 </div>
             </nav>
+            {% endif %}
+        </div>
 
+        <div class="content">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -73,35 +85,26 @@
                 {% endfor %}
             {% endif %}
             {% endwith %}
-
-            <div class="container h-100">
+        
+            <main>
                 {% block content %}
                 {% endblock %}
-            </div>
+            </main>
 
-        </main>
-        <!-- <script
-            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"
-        ></script> -->
+        </div>
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        
 
-        <!-- For adding javascript to webpage -->
+        <!-- Global js script(s) -->
         <script
             type="text/javascript"
             src="{{ url_for('static', filename='index.js')}}"
         ></script>
+
+        <!-- Sidebar js script(s) -->
+        <script src="{{ url_for('static', filename='sidebar.js')}}"></script>
 
         {% block scripts %}
         {% endblock %}
