--- a/website/static/view-recipe.css
+++ b/website/static/view-recipe.css
@@ -1,5 +1,9 @@
 /* Adding rounding edge to progress bars*/
 
+* {
+    cursor: default;
+}
+
 .progress-bar {
     border: 0;
     border-radius: 10px;
