added universal margin on content

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -87,8 +87,10 @@
             {% endwith %}
         
             <main>
-                {% block content %}
-                {% endblock %}
+                <div class="m-3">
+                    {% block content %}
+                    {% endblock %}
+                </div>
             </main>
 
         </div>
