--- a/website/templates/create-recipe.html
+++ b/website/templates/create-recipe.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %} {% block title %}Create Recipe - NutriMetrics{% endblock %}
+{% extends "base.html" %} {% block title %}Create Recipe · NutriMetrics{% endblock %}
 
 {% block inline_style %}
 <link rel="stylesheet" href="{{ url_for('static', filename='create-recipe.css')}}">
 {% endblock %}
 
 {% block content %}
-<h1 align="center">Create a recipe</h1>
+<h1 align="center">NutriMetrics Create recipe</h1>
 <form method="POST">
     <div input-group mb-3>
         <label for="recipe-name" class="form-label">Name your recipe</label>
