--- a/website/templates/edit-recipe.html
+++ b/website/templates/edit-recipe.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Edit {{recipe.name}} - NutriMetrics{% endblock %}
+{% extends "base.html" %} {% block title %}Edit {{recipe.name}} · NutriMetrics{% endblock %}
 
 {% block content %}
 <h1 align="center">Edit recipe</h1>
