--- a/website/templates/landing-page/my-product-page.html
+++ b/website/templates/landing-page/my-product-page.html
@@ -23,6 +23,8 @@
         <a class="nav-link" href="#Our-Story">Our story</a>
         <a class="nav-link" href="#Reviews">Reviews</a>
         <a class="nav-link" href="#Contact">Contact</a>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/sign-up">Sign up</a>
       </nav>
     </header>
     <main>
