--- a/website/static/sidebar.css
+++ b/website/static/sidebar.css
@@ -113,7 +113,6 @@ html {
   }
 }
 
-
 .side-bar {
   width: 18rem; 
   height: 100%;
@@ -124,8 +123,12 @@ html {
   transition: 0.6s ease;
   top: 0;
   bottom: 0;
-  overflow: hidden;
 }
+
+/* .side-bar::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+} */
 
 main {
   margin-left: 18rem;
@@ -187,11 +190,6 @@ main {
   height: 3rem;
 }
 
-.side-bar.collapse .features-item-btn,
-.side-bar.collapse .logo-name__button {
-  width: 3rem;
-}
-
 
 .side-bar.collapse .features-item-text,
 .side-bar.collapse .logo,
@@ -206,6 +204,7 @@ main {
 }
 
 .features-item-text {
+  width: 1.2rem;
   transition: opacity 0.2s ease;
   opacity: 1;
   white-space: nowrap;
@@ -213,7 +212,21 @@ main {
 }
 
 .features-item-icon, .logo-name__icon {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: 0;
 }
 
+.features-item-icon-svg {
+  margin-left: 0.1rem;
+  width: 1.5rem;
+  padding: 0;
+}
+
+svg {
+  display: block;
+  margin: auto;
+}
+
+.side-bar.collapse .features-item-btn-svg {
+  width: 3.25rem;
+}
