--- a/website/templates/logged-in/sidebar.html
+++ b/website/templates/logged-in/sidebar.html
@@ -18,25 +18,31 @@
 
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/dashboard" class="features-item-btn btn btn-toggle nav-link text-white">
-                <i class="features-item-icon bi bi-ui-checks-grid"></i>
+                <div class="features-item-icon">
+                    <i class="bi bi-ui-checks-grid"></i>
+                </div>
                 <span class="features-item-text">Dashboard</span>
             </a>
         </li>
 
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/trends" class="features-item-btn btn btn-toggle nav-link text-white">
-                <i class="features-item-icon bi bi-bar-chart-line-fill"></i>
+                <div class="features-item-icon">
+                    <i class="bi bi-bar-chart-line-fill"></i>
+                </div>
                 <span class="features-item-text">Trends</span>
             </a>
         </li>
 
         <li class="features-item nav-item d-grid mt-1">
-            <button class="features-item-btn btn btn-toggle rounded collapsed text-white" data-bs-toggle="collapse" data-bs-target="#foods-collapse" aria-expanded="true">
-                <svg style="vertical-align: middle;" class="features-item-icon text-white" height="1.25em" xmlns="http://www.w3.org/2000/svg" 
-                    viewBox="0 0 448 512">
-                    <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path fill="#FFFFFF" stroke="#FFFFFF" d="M224 112c-8.8 0-16-7.2-16-16l0-16c0-44.2 35.8-80 80-80l16 0c8.8 0 16 7.2 16 16l0 16c0 44.2-35.8 80-80 80l-16 0zM0 288c0-76.3 35.7-160 112-160c27.3 0 59.7 10.3 82.7 19.3c18.8 7.3 39.9 7.3 58.7 0c22.9-8.9 55.4-19.3 82.7-19.3c76.3 0 112 83.7 112 160c0 128-80 224-160 224c-16.5 0-38.1-6.6-51.5-11.3c-8.1-2.8-16.9-2.8-25 0c-13.4 4.7-35 11.3-51.5 11.3C80 512 0 416 0 288z"/>
-                </svg>
+            <button class="features-item-btn features-item-btn-svg btn btn-toggle rounded collapsed text-white" data-bs-toggle="collapse" data-bs-target="#foods-collapse" aria-expanded="true">
+                <div class="features-item-icon-svg">
+                    <svg
+                        class="text-white" xmlns="http://www.w3.org/2000/svg" 
+                        viewBox="0 0 448 512">
+                        <path fill="#FFFFFF" stroke="#FFFFFF" d="M224 112c-8.8 0-16-7.2-16-16l0-16c0-44.2 35.8-80 80-80l16 0c8.8 0 16 7.2 16 16l0 16c0 44.2-35.8 80-80 80l-16 0zM0 288c0-76.3 35.7-160 112-160c27.3 0 59.7 10.3 82.7 19.3c18.8 7.3 39.9 7.3 58.7 0c22.9-8.9 55.4-19.3 82.7-19.3c76.3 0 112 83.7 112 160c0 128-80 224-160 224c-16.5 0-38.1-6.6-51.5-11.3c-8.1-2.8-16.9-2.8-25 0c-13.4 4.7-35 11.3-51.5 11.3C80 512 0 416 0 288z"/>
+                    </svg>
+                </div>
                 <span class="features-item-text" style="vertical-align: middle;">Foods</span>
             </button>
             <div class="features-item-dropdown collapse" id="foods-collapse">
@@ -50,7 +56,9 @@
 
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/my-recipes" class="features-item-btn btn btn-toggle nav-link text-white">
-                <i class="features-item-icon bi bi-journals"></i>
+                <div class="features-item-icon">
+                    <i class="bi bi-journals"></i>
+                </div>
                 <span class="features-item-text">My Recipes</span>
             </a>
         </li>
@@ -59,16 +67,20 @@
 
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/create-recipe" class="features-item-btn btn btn-toggle nav-link text-white">
-                <i class="features-item-icon bi bi-plus-circle"></i>
+                <div class="features-item-icon">
+                    <i class="bi bi-plus-circle"></i>
+                </div>
                 <span class="features-item-text">New Recipe</span>
             </a>
         </li>
 
     </ul>
-    <ul class="nav nav-pills flex-column">
+    <ul class="features-list nav nav-pills flex-column">
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/settings" class="features-item-btn btn btn-toggle nav-link text-white">
-                <i class="features-item-icon bi bi-gear-fill fa-lg fa-fw"></i>
+                <div class="features-item-icon">
+                    <i class="bi bi-gear-fill"></i>
+                </div>
                 <span class="features-item-text">Settings</span>
             </a>
         </li>
@@ -76,7 +88,7 @@
         <hr>
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                <img src="https://github.com/dmor1928.png" alt="" width="32" height="32" class="rounded-circle me-2">
                 <strong class="features-item-text">{{user_name}}</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
