--- a/website/templates/logged-in/sidebar.html
+++ b/website/templates/logged-in/sidebar.html
@@ -4,7 +4,7 @@
         <div class="logo-name align-items-center text-white">
             <svg class="logo" id="sidebar-logo" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                 <path d="M34 24L24 34C24 34 15.0002 25 14 24C12.9998 23 12.5 21 14 19C15.5 17 18.5 17 20 18C21.5001 19 22.0001 20 24 20C26 20 26.5001 19 28 18C29.5 17 32.5003 17 34.0003 19C35.5003 21 35 23 34 24Z" 
-                fill="#00d959" stroke="#00d959" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                fill="#00d959" stroke="#00d959" stroke-width="3" stroke-linecap="round"/>
             </svg>
             <span class="fs-4 logo-name__text">NutriMetrics</span>
         </div>
